modily dev page style

--- a/dev/index.html
+++ b/dev/index.html
@@ -9,8 +9,12 @@
                 -webkit-font-smoothing: antialiased;
             }
             body {
-                background-color: #f6f7fb;
+                background-color: #fff;
                 color: #888da8;
+            }
+            #root {
+                width: 980px;
+                margin: auto;
             }
             .dev-section {
                 padding: 20px 0;
